[package]
name = "rust-hello-world"
version = "0.1.0"
edition = "2021"
authors = ["Stephanie Aelmore <steph.aelmore@gmail.com>"]
description = "A simple Rust package to learn the language and development environment"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "rust-hello-world"
path = "main.rs"
